# directory-organizer-local-llm

./: .env.sample  .gitignore  README.md  pyproject.toml
dirorganizer/: __init__.py  __main__.py  benchmark.py  cli.py  demo_data.py  env_loader.py  llm_client.py  models.py  planner.py  presets.py  review_api.py  rules.py  scanner.py
dirorganizer/gui/: app.py
scripts/: benchmark_planner.py  run_directory_organizer.py
tests/: test_benchmark.py  test_directory_organizer.py  test_review_queue_demo.py
